--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "e-commerce-backend",
   "version": "1.0.0",
-  "main": "app.ts",
+  "main": "server.ts",
     "scripts": {
-    "dev": "ts-node app.ts",
-    "start": "ts-node app.ts",
+    "dev": "ts-node server.ts",
+    "start": "ts-node server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
 
