--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "e-commerce-backend",
   "version": "1.0.0",
   "main": "server.ts",
-    "scripts": {
-    "dev": "ts-node server.ts",
+  "scripts": {
+    "dev": "ts-nodemon server.ts",
     "start": "ts-node server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AnandiParmar/E-commerce-Backend.git"
@@ -19,36 +17,34 @@
     "url": "https://github.com/AnandiParmar/E-commerce-Backend/issues"
   },
   "homepage": "https://github.com/AnandiParmar/E-commerce-Backend#readme",
-  "description": "",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.0",
-    "bcrypt": "^6.0.0",
-    "check": "^1.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "mogoose": "^0.0.1-security",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.15.0",
-    "multer": "^2.0.0",
-    "nodemailer": "^7.0.3",
-    "nodemon": "^3.1.10",
-    "react-hook-form": "^7.56.4",
-    "socket.io": "^4.8.1",
-    "xlsx": "^0.18.5"
+    "bcrypt": "5.1.1",
+    "cors": "2.8.5",
+    "dotenv": "16.5.0",
+    "express": "5.1.0",
+    "express-validator": "7.2.1",
+    "jsonwebtoken": "9.0.2",
+    "mongodb": "6.16.0",
+    "mongoose": "8.15.0",
+    "multer": "2.0.0",
+    "nodemailer": "7.0.3",
+    "socket.io": "4.8.1",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/multer": "^1.4.12",
+    "@types/bcrypt": "5.0.2",
+    "@types/cors": "2.8.17",
+    "@types/express": "5.0.2",
+    "@types/jsonwebtoken": "9.0.9",
+    "@types/multer": "1.4.12",
     "@types/node": "^22.15.19",
-    "@types/nodemailer": "^6.4.17",
+    "@types/nodemailer": "6.4.17",
+    "nodemon": "3.1.10",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
